# uv-template

./: LICENSE  README.md  pyproject.toml
src/uvtemp/: __cli__.py  __init__.py
tests/uvtemp/: test_cli.py  test_init.py
